cmake_minimum_required(VERSION 3.23)
project(Tree_BinaryTree)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tree_BinaryTree BTree.cpp kcount2.cpp kcount1.cpp kcount3.cpp CreateBTree1.cpp CreateBTree2.cpp ThreadTree.cpp HuffmanTree.c HDU1232.cpp q1.cpp q3.cpp q4.cpp q5.cpp q6.cpp q7.cpp q8.cpp HuffmanTree.cpp)
